feat: add http, usecase, entity and helper function

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,5 @@
 app:
-  app_name: 'angsuram-service'
+  app_name: 'angsuran-service'
   app_version: '1.0.0'
   app_environment: 'development'
   app_base_dir: ''
