--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         ports:
             - 8001:8001
         volumes:
+            - ./files/angsuran.xlsx:/app/cmd/files/angsuran.xlsx
             - ./log/service.log:/app/cmd/log/service.log
             - ./config/config.yml:/app/cmd/config/config.yml
             - /etc/hosts:/etc/hosts
